# Summer-of-Making

./: .eslintrc.js  .gitignore  PROJECT-SUMMARY.md  README.md  package.json  tsconfig.json
.github/workflows/: ci-cd.yml  release.yml  security.yml
.qoder/quests/: unknown-task.md
apps/desktop/: index.html  jest.config.js  package.json  tailwind.config.js  tsconfig.electron.json  tsconfig.json  vite.config.ts
apps/desktop/electron/: main.ts  preload.ts
apps/desktop/src/: App.tsx  main.tsx
apps/desktop/src/components/: ErrorBoundary.tsx  GraphVisualization.tsx  Layout.tsx  SearchFilters.tsx  SearchHistory.tsx  SearchResults.tsx  Sidebar.tsx  StatusBar.tsx  TitleBar.tsx  UpdateNotification.tsx
apps/desktop/src/hooks/: useAppInitialization.ts
apps/desktop/src/pages/: DashboardPage.tsx  DocumentsPage.tsx  EntitiesPage.tsx  GraphPage.tsx  SearchPage.tsx  SettingsPage.tsx
apps/desktop/src/store/: ui.ts
apps/desktop/src/styles/: globals.css
apps/desktop/src/utils/: trpc.ts
apps/desktop/tests/: setup.ts
apps/desktop/tests/components/: GraphVisualization.test.tsx  SearchInterface.test.tsx
apps/desktop/tests/mocks/: server.ts
apps/mobile/: app.json  babel.config.js  package.json  tsconfig.json
apps/mobile/src/app/: _layout.tsx
apps/mobile/src/app/(tabs)/: _layout.tsx  documents.tsx  index.tsx  profile.tsx  scanner.tsx  search.tsx
apps/mobile/src/services/: cameraService.ts  documentProcessor.ts  rustBridge.ts  trpc.ts
apps/mobile/src/store/: app.ts
apps/mobile/src/utils/: theme.ts
backend/api/: .env.example  jest.config.js  package.json  tsconfig.json
backend/api/src/: index.ts  trpc.ts
backend/api/src/mock/: search-engine.ts
backend/api/src/routes/: entity.ts  graph.ts  ingestion.ts  search.ts
backend/api/src/services/: entity.ts  entityExtraction.ts  graph.ts  graphRelationshipBuilder.ts  ingestion.ts  search.ts  semanticEmbeddings.ts
backend/api/tests/: documents.test.ts  globalSetup.ts  globalTeardown.ts  search.test.ts  setup.ts
backend/database/: graph_store.rs  index.ts  neo4j_store.ts  package.json  tsconfig.json
docs/api/: README.md
docs/user-guide/: README.md
infrastructure/docker/: Dockerfile.api  Dockerfile.desktop  Dockerfile.rust  Dockerfile.web  docker-compose.yml
libs/encryption/: Cargo.toml
libs/encryption/src/: lib.rs
libs/file-watcher/: Cargo.toml
libs/file-watcher/src/: lib.rs
libs/ingestion/: Cargo.toml
libs/ingestion/src/: lib.rs
libs/search/: Cargo.toml
libs/search/src/: lib.rs
rust-core/: Cargo.toml
rust-core/autoorganize-core/: Cargo.toml  build.rs
rust-core/autoorganize-core/src/: autoorganize.udl  database.rs  ffi.rs  lib.rs
rust-core/encryption/: Cargo.toml
rust-core/encryption/src/: lib.rs
rust-core/file-watcher/: Cargo.toml
rust-core/file-watcher/src/: lib.rs
rust-core/ingestion/: Cargo.toml
rust-core/ingestion/src/: extractors.rs  lib.rs  processors.rs
rust-core/search/: Cargo.toml
rust-core/search/src/: indexer.rs  lib.rs  ranker.rs  similarity.rs
shared/types/: package.json  tsconfig.json
shared/types/src/: index.ts
shared/utils/: package.json
shared/utils/src/: index.ts
tests/: globalSetup.ts  globalTeardown.ts  jest.config.js  setup.ts
tests/integration/: e2e.test.ts  performance.test.ts
