[workspace]
members = [
    "autoorganize-core",
    "file-watcher", 
    "encryption",
    "ingestion",
    "search"
]

resolver = "2"

[workspace.dependencies]
tokio = { version = "1.32", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.4", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.10"
tracing = "0.1"
tracing-subscriber = "0.3"

# FFI and bindings
uniffi = "0.24"
uniffi_macros = "0.24"

# File system and OS integration
notify = "6.1"
walkdir = "2.3"

# Database
rusqlite = { version = "0.29", features = ["bundled", "serde_json"] }
rocksdb = "0.21"

# Encryption
sodiumoxide = "0.2"

# HTTP and network
reqwest = { version = "0.11", features = ["json"] }
url = "2.4"

# Text processing and NLP
regex = "1.9"
unicode-segmentation = "1.10"
stemmer = "0.2"

# Async and concurrency
futures = "0.3"
async-trait = "0.1"

# Configuration and environment
config = "0.13"
dirs = "5.0"

# Testing dependencies
tempfile = "3.8"
serial_test = "3.0"
test-case = "3.3"
criterion = { version = "0.5", features = ["html_reports"] }
tokio-test = "0.4"
pretty_assertions = "1.4"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
debug = true
opt-level = 0