[package]
name = "encryption"
version = "0.1.0"
edition = "2021"

[lib]
name = "encryption"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Core dependencies
libsodium-sys = "0.2"
sodiumoxide = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }

# FFI bindings
uniffi = { workspace = true }
uniffi_macros = { workspace = true }

# Cryptography and security
sha2 = "0.10"
argon2 = "0.5"
aes-gcm = "0.10"
chacha20poly1305 = "0.10"

[dev-dependencies]
tempfile = { workspace = true }
serial_test = { workspace = true }
test-case = { workspace = true }
pretty_assertions = { workspace = true }
criterion = { workspace = true }
hex = "0.4"

[build-dependencies]
uniffi = { workspace = true }

[[bench]]
name = "encryption_bench"
harness = false

[features]
default = []
ffi = ["uniffi"]