[package]
name = "file-watcher"
version = "0.1.0"
edition = "2021"

[lib]
name = "file_watcher"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Core dependencies
notify = "6.1"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
log = { workspace = true }

# FFI bindings
uniffi = { workspace = true }
uniffi_macros = { workspace = true }

# Async support
futures = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio-test = { workspace = true }
serial_test = { workspace = true }
test-case = { workspace = true }
pretty_assertions = { workspace = true }
criterion = { workspace = true }

[build-dependencies]
uniffi = { workspace = true }

[[bench]]
name = "file_watcher_bench"
harness = false

[features]
default = []
ffi = ["uniffi"]